/*******************************************************************************
 * Copyright (c) 2013-2017 Contributors to the Eclipse Foundation
 * 
 * See the NOTICE file distributed with this work for additional
 * information regarding copyright ownership.
 * All rights reserved. This program and the accompanying materials
 * are made available under the terms of the Apache License,
 * Version 2.0 which accompanies this distribution and is available at
 * http://www.apache.org/licenses/LICENSE-2.0.txt
 ******************************************************************************/
syntax = "proto3";

option java_multiple_files = true;
option java_package = "mil.nga.giat.geowave.service.grpc.protobuf";
option java_outer_classname = "VectorQueryService";

// Interface exported by the server.
service VectorQuery {
  // CQL query for vector-based data
  rpc CqlQuery(CQLQueryParameters) returns (stream Feature) {}
  rpc SpatialQuery(SpatialQueryParameters) returns (stream Feature) {}
}

// Base query parameters as defined by AbstractGeoWaveQuery.java
message BaseGeoWaveQueryParamters {
	string storeName = 1;
	bytes indexId = 2;
	bytes adapterId = 3;
}

//decimal degree coordinate type
message Coordinate {
	double lat = 1;
	double lon = 2;
}

// A CQL query string to be executed by the server
message CQLQueryParameters {
  BaseGeoWaveQueryParamters baseParams = 1;
  string cql = 2;
}

message SpatialQueryParameters {
	BaseGeoWaveQueryParamters baseParams = 1;
	string geometry = 2;	//ISO 19107 Geometry text definition
	repeated Coordinate coordinates = 3;
}

//a feature in this case is just a map of string key value pairs
message Feature {
	map<string, string> attributes = 1;
}

